--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,16 @@
     <version>1.0-SNAPSHOT</version>
     <name>state-machine</name>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
                     <compilerVersion>8</compilerVersion>
                     <source>8</source>
